force-app/main/default/objects/BOSpecialist__c/BOSpecialist__c.object-meta.xml
<CustomObject>
    <label>Manager`s BO Specialist</label>
    <nameField>
        <displayFormat>BOS-{000000}</displayFormat>
        <label>BOS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manager`s BO Specialists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>