force-app/main/default/objects/BOSpecialist__c/fields/BOSpecialist__c.field-meta.xml
<CustomField>
    <fullName>BOSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BO Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_s_BO_Specialists1</relationshipName>
    <type>Lookup</type>
</CustomField>