force-app/main/default/objects/BOSpecialist__c/fields/BOSType__c.field-meta.xml
<CustomField>
    <fullName>BOSType__c</fullName>
    <label>BO Specialist Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <default>true</default>
                <label>Assigned BO Specialist</label>
            </value>
            <value>
                <fullName>Additional</fullName>
                <label>Additional BO Specialist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>