force-app/main/default/objects/BOSpecialist__c/fields/DefaultBOS__c.field-meta.xml
<CustomField>
    <fullName>DefaultBOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default BOS</label>
    <type>Checkbox</type>
</CustomField>