force-app/main/default/objects/BOSpecialist__c/fields/ManagerBOS_H__c.field-meta.xml
<CustomField>
    <fullName>ManagerBOS_H__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ManagerBOS_H</label>
    <referenceTo>ManagerBOS_H__c</referenceTo>
    <relationshipLabel>Manager`s BO Specialists</relationshipLabel>
    <relationshipName>Manager_s_BO_Specialists</relationshipName>
    <type>Lookup</type>
</CustomField>