force-app/main/default/objects/BOSpecialist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Manager__c</columns>
    <columns>BusinessDivision__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>BOSpecialist__c</columns>
    <columns>BOSType__c</columns>
    <columns>DefaultBOS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>